--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ a:hover {
 .bg-image {
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size:contain;
+  background-size:cover;
   background-position: center center;
 }
 
